# libchewing

UnitTest/: CMakeCache.txt  CMakeLists.txt  ChewingIO.cpp  Makefile  UintTest  UnitTest  UnitTest.cpp  cmake_install.cmake  testchewingIO.cpp
UnitTest/chewingIO/: CMakeCache.txt  CMakeLists.txt  ChewingIO.cpp  cmake_install.cmake  testchewingIO  testchewingIO.cpp
include/: simulate.c
test/: test.c
